--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,13 @@
+version: "3.9"
+
+services:
+  postgres:
+    image: pgvector/pgvector:pg18
+    container_name: pgvector-db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: Gulam@123
+      POSTGRES_DB: vector_db
+    ports:
+      - "5432:5432"
 
